Added document of 'customDates'.

--- a/docs-site/src/examples.scss
+++ b/docs-site/src/examples.scss
@@ -108,3 +108,8 @@
 .example__timezone-selector {
   margin-left: 10px;
 }
+
+.example-custom-dates-holiday{
+  color: #e00;
+  font-weight: bold;
+}
